apply plugin: 'com.android.application'

android {
    compileSdkVersion 30
    buildToolsVersion '29.0.2'

    defaultConfig {
        applicationId "com.hiddenramblings.tagmo"
        minSdkVersion 16
        targetSdkVersion 30
        versionCode 9
        versionName "2.7.4"

        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["androidManifestFile": "$projectDir/src/main/AndroidManifest.xml".toString()]
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    project.archivesBaseName = "TagMo-" + 'git rev-parse --short HEAD'.execute().text.trim()

//    productFlavors {
//        fat {
//            dimension "abi"
//            ndk {
//                abiFilters "x86", "armeabi-v7a"
//            }
//        }
//    }
//
//    splits {
//        abi {
//            enable true
//            reset()
//            include 'x86', 'armeabi-v7a'
//            universalApk true
//        }
//    }

    externalNativeBuild {
        cmake {
            path "CMakeLists.txt"
        }
    }

    ndkVersion "21.4.7075529"

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    applicationVariants.all { variant ->
        variant.outputs[0].outputFileName = project.archivesBaseName + ".apk"
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    implementation 'androidx.preference:preference:1.1.1'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    //noinspection GradleDependency - 2.2.6 build failure
    implementation 'com.robertlevonyan.view:MaterialChipView:2.2.5'
    implementation 'org.apmem.tools:layouts:1.10@aar'
    annotationProcessor "org.androidannotations:androidannotations:4.6.0"
    implementation "org.androidannotations:androidannotations-api:4.6.0"
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    implementation 'io.github.vicmikhailau:MaskedEditText:4.0.7'
    implementation 'com.google.android.gms:play-services-safetynet:17.0.1'
}
